[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/scripts/KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://src/Imports/run_animation.png" type="Texture" id=2]
[ext_resource path="res://src/Imports/sword.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "run",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 8.12842, 19.1789 )

[sub_resource type="CapsuleShape2D" id=12]
height = 45.5924

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 7.77446, 18.9429 )

[sub_resource type="Animation" id=14]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("hurtbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=15]
resource_name = "attack"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("sword:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -50.0, 50.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sword:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2147483649
collision_mask = 2147483649
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )
animation = "run"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 11 )

[node name="kunai" type="Position2D" parent="."]

[node name="hitbox" type="Position2D" parent="."]
position = Vector2( 50, 0 )

[node name="melee" type="Area2D" parent="hitbox"]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox/melee"]
shape = SubResource( 12 )
disabled = true

[node name="melee_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/knockback = SubResource( 14 )

[node name="healcooldown" type="Timer" parent="."]
wait_time = 10.0

[node name="kunai_cooldown" type="Timer" parent="."]
wait_time = 3.0

[node name="sword" type="Sprite" parent="."]
visible = false
position = Vector2( 40, 0 )
rotation = 0.872665
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 15 )
[connection signal="timeout" from="melee_timer" to="." method="_on_melee_timer_timeout"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="healcooldown" to="." method="_on_healcooldown_timeout"]
[connection signal="timeout" from="kunai_cooldown" to="." method="_on_kunai_cooldown_timeout"]
